--- a/README
+++ b/README
@@ -1,8 +1,13 @@
 To deploy dev django project the first time:
  - git clone
- - [create virtual env and activate it]
+ - [create virtual env and activate it] or [use --user]
+Then:
  - python setup.py sdist
  - pip install dist/meteography-0.1.tar.gz
+Or:
+ - pip install -e .
+Note about requirements: system distrib may be easier
+Then:
  - cd website/
  - mkdir data cams
  - create DB: 'python manage.py migrate'
