Read prod DB config from env variable

--- a/README
+++ b/README
@@ -20,3 +20,6 @@ Use:
  - add a webcam
  - add a prediction params
  - send snapshots to the REST API
+
+Production:
+ - To be documented. Contact me if in doubt.
